--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "morgan": "^1.10.0",
     "openai": "^4.55.4"
   }
 }
