--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.4",
     "tsconfig.json": "^1.0.11",
     "typescript": "^5.5.4"
